test/stg/error/dataDouble.stg
data Mybool = True | False;
data Mybool = Zero | Else;